<resources>
    <string name="app_name">FoodAcademy</string>
    <string name="title_activity_home">Food Academy</string>
    <string name="title_about">Welcome</string>
    <string name="title_events">Events</string>
    <string name="title_buchen">Buchen</string>
    <string name="title_open">Open</string>
    <string name="title_offnungszeiten">Öffnungszeiten</string>
    <string name="title_more">Mehr</string>

    <string name="titel_message">
Herzlich willkommen in unserem Restaurant! Wir wünschen uns,
dass Sie sich wohl fühlen und Speis und Trank in Ruhe genießen.
Bei einem guten Getränk und liebevoll frisch zubereitetem Essen
gelingt es Ihnen sicherlich, Ihren Tag gemütlich in unserem
Restaurant ausklingen zu lassen. </string>

    //Tischreservierung
    <string name="title_book_text"> Tischreservierung </string>
    <string name="dateET">Datum</string>
    <string name="timeET">Zeit</string>
    <string name="vornameET">Vorname</string>
    <string name="nachnameET">Nachname</string>
    <string name="anzahlET">"Anzahl Personen"</string>
    <string name="emailET">E-Mail</string>
    <string name="telefonET">Telefon/ Handy</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="bookButton">Anfrage senden</string>

    //events
    <string name="halloween">halloween_party</string>
    <string name="jazz">jazz_party</string>
    <string name="herbst">herbst_party</string>
    <string name="disco">disco_party</string>
    <string name="party">party_party</string>

    <string name="halloween_date">31 October Mittwoch</string>
    <string name="jazz_date">2 November Freitag</string>
    <string name="herbst_date">3 November Samstag</string>
    <string name="disco_date">9 November Freitag</string>
    <string name="party_date">10 November Freitag</string>

    //Öffnunszeiten

    <string name="montag">Montag - Donnerstag</string>
    <string name="freitag">Freitag - Samstag</string>
    <string name="sonntag">Sonntag</string>
    <string name="timeq">9h - 21h</string>
    <string name="time2">9h - 23h</string>
    <string name="time3">8:30h - 22:30h</string>

    //Mehr
    <string name="gallery"><u>Galerie</u></string>
    <string name="menu"><u>Speisekarte</u></string>
    <string name="feedback"><u>Bewertung schreiben</u></string>
    <string name="route"><u>Uns finden</u></string>
    <string name="about"><u>Über uns</u></string>
    <string name="title_activity_route">Map</string>
    <string name="title_activity_gallery">GalleryActivity</string>
    <string name="action_settings">Settings</string>
    <string name="section_format">Hello World from section: %1$d</string>
    <string name="title_activity_feedback">FeedbackActivity</string>
    //Menu
    <string name="breakfast">
        <b>"FRÜHSTÜCKSKARTE\n"</b>
        "bis 15 Uhr\n"
        "---------------\n"
        <i>"WIENER FRÜHSTÜCK\n"</i>
        "2 Semmeln, Butter, Marillen-Marmelade, 2 Eier im Glas\n"
        <i>"PARISER FRÜHSTÜCK\n"</i>
        "Croissant, kleine Semmel, Madeleine, Butter, Marmelade und Honig\n"
        <i>"NEWYORKER FRÜHSTÜCK\n"</i>
        "Hausgemachter Bagel mit hausgebeiztem Lachs und Frischkäse sowie Meerrettich und Gemüsesticks\n"
        <i>"VITALFRÜHSTÜCK\n"</i>
        "Avocadomus, Buchweizen-Karotten-Muffin, Honig, Müsli mit Joghurt, Ziegenfrischkäse, Obst und Rohkost, Kräuterquark, Brotkorb und Butter\n"
        <i>"KÄSEFRÜHSTÜCK\n"</i>
        "3 Sorten Rohmilchkäse, Alpen-Emmentaler, Ziegenkäse, marinierter Mozzarella, Honig und Feigensenf, Joghurt mit Beeren und Ahornsirup, Butter, Brotkorb\n"
        <i>"BIRCHER-MÜSLI\n"</i>
        "mit Waldbeeren, frischen Früchten und gerösteten Mandeln\n"
        <i>"EGGS BENEDICT\n"</i>
        "mit Bacon, jungem Spinat und Sauce Hollandaise auf English Muffin\n"

    </string>
    <string name="lunch">
        <b>"TAGESKARTE\n\n"</b>
        <b>"VORSPEISEN\n"</b>
        "11 bis 18 Uhr\n"
        "---------------\n"
        <i>"KLEINER SALAT MIT WILDKRÄUTERN\n"</i>
        "Orangen-Quitten und Thymian-Grissini\n"
        <i>"MARINIERTER RINDERTAFELSPITZ\n"</i>
        "mit Kürbiskernöl, Vogerlsalat und Schalotten\n"
        <i>"STEIRISCHER BACKHENDL-SALAT\n"</i>
        "auf Erdäpfel-Gurkensalat mit Vogerlsalat in Kürbiskern-Dressing\n\n"
        <b>"SUPPEN\n"</b>
        "11 bis 18 Uhr\n"
        "---------------\n"
        <i>"MUSKAT-KÜRBISSUPPE\n"</i>
        "mit Madras-Curry, Zitronenjoghurt und karamellisierten Kürbiskernen\n"
        <i>"WIENER RINDERSUPPE\n"</i>
        "mit Frittaten\n\n"
        <b>"HAUPTGERICHTE\n"</b>
        "11 bis 18 Uhr\n"
        "---------------\n"
        <i>"KABELJAU-FILET\n"</i>
        "auf grünem Erbs-Püree, Veltliner-Sauce und Erdäpfel-Steinpilz-Gratin\n"
        <i>"ERDÄPFEL-NOCKERLN\n"</i>
        "mit geschmortem Radicchio, Vacherin Mont d’Or, Pinienkernen und Rauke\n"
        <i>"ROASTBEEF VOM GUT HESTERBERG\n"</i>
        "mit süß-saurem Kürbis-Ragout, Gewürz-Butter und gebackenen Erdäpfeln\n"
    </string>

    <string name="dinner">
        <b>"ABENDKARTE\n\n"</b>
        <b>"APERITIF\n"</b>
        "Ein Auszug aus unserer Getränkekarte\n"
        "---------------\n"
        <b>"VORSPEISEN\n"</b>
        "ab 18 Uhr\n"
        "---------------\n\n"
        <i>"POWERADEN\n"</i>
        "Kleine Artischocken mit Crème fraîche, Cocktailsauce und Vinaigrette\n"
        <i>"STEIRISCHER BACKHENDL-SALAT\n"</i>
        "auf Erdäpfel-Gurkensalat mit Vogerlsalat in Kürbiskern-Dressing\n"
        <i>"SAUTIERTE TAUBENBRUST\n"</i>
        "mit Rum-Früchten, Berglinsensalat und Pancetta\n\n"


        <b>"SUPPEN\n"</b>
        "ab 18 Uhr\n"
        "---------------\n"
        <i>"WIENER RINDERSUPPE\n"</i>
        "mit Frittaten\n"
        <i>"MEDITERRANE FISCHSUPPE\n"</i>
        "mit Jakobsmuschel, Safran und Gemüse\n\n"

        <b>"HAUPTGERICHTE\n"</b>
        "ab 18 Uhr\n"
        "---------------\n"
        <i>"KABELJAU-FILET\n"</i>
        "auf grünem Erbs-Püree, Veltliner-Sauce und Erdäpfel-Steinpilz-Gratin\n"
        <i>"ERDÄPFEL-NOCKERLN\n"</i>
        "mit geschmortem Radicchio, Vacherin Mont d’Or, Pinienkernen und Rauke\n"
        <i>"WIENER SCHNITZEL\n"</i>
        "mit Erdäpfel-Gemüsegröstl und Meerrettich-Brotsauce und Apfel-Kren\n"
    </string>

    <string name="desserts">
         <b>"DESSERTS\n"</b>
        "---------------\n"
        <i>"CREMEEIS AUS PIEMONTESISCHEN HASELNÜSSEN\n"</i>
        "mit Zwetschgen-Ragout und dunkler Schokoladen-Zimt-Praline\n"
        <i>"KAISERSCHMARRN\n"</i>
        "mit Zwetschgenröster\n"
        <i>"HONIG-CRÈME BRÛLÉE\n"</i>
        "mit Brombeer-Ragout und Rosmarin-Crumble\n"
        <i>"HAUSGEMACHTER APFELSTRUDEL\n"</i>
        "mit Vanillesauce\n"
        <i>"QUITTEN-SORBET\n"</i>
        "auf Haselnuss-Biskuit mit geschmorten Quitten und Vanille-Schaum\n"
    </string>
    <string name="more_gallery">Galerie</string>
    <string name="more_menu">Speisekarte</string>
    <string name="more_feedback">Bewertungen</string>
    <string name="more_route">Route</string>
    <string name="more_wir">Über uns</string>


    <string name="large_text">
        "Material is the metaphor.\n\n"

        "A material metaphor is the unifying theory of a rationalized space and a system of motion."
        "The material is grounded in tactile reality, inspired by the study of paper and ink, yet "
        "technologically advanced and open to imagination and magic.\n"
        "Surfaces and edges of the material provide visual cues that are grounded in reality. The "
        "use of familiar tactile attributes helps users quickly understand affordances. Yet the "
        "flexibility of the material creates new affordances that supercede those in the physical "
        "world, without breaking the rules of physics.\n"
        "The fundamentals of light, surface, and movement are key to conveying how objects move, "
        "interact, and exist in space and in relation to each other. Realistic lighting shows "
        "seams, divides space, and indicates moving parts.\n\n"

        "Bold, graphic, intentional.\n\n"

        "The foundational elements of print based design typography, grids, space, scale, color, "
        "and use of imagery guide visual treatments. These elements do far more than please the "
        "eye. They create hierarchy, meaning, and focus. Deliberate color choices, edge to edge "
        "imagery, large scale typography, and intentional white space create a bold and graphic "
        "interface that immerse the user in the experience.\n"
        "An emphasis on user actions makes core functionality immediately apparent and provides "
        "waypoints for the user.\n\n"

        "Motion provides meaning.\n\n"


    </string>

    <string name="write_feedback">Bewertung schreiben</string>
    <string name="wir_name">Food Academy</string>
    <string name="wir_adresse">Friedrichsruher Str. 22 · 14193 Berlin</string>
    <string name="wir_phone">  +49 92 08 / 2 89</string>
    <string name="wir_mail">food-academy@t-online.de</string>


    <string name="wir_text">

        "Berliner Gemütlichkeit und elegantes Flair inmitten schöner Natur:"
        "In unserem Restaurant können Sie Feste feiern und gutes Essen und Wein genießen."


    </string>


</resources>
