<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:android="http://schemas.android.com/apk/res/android">

    <item
        android:id="@+id/nav_about"
        android:icon="@drawable/ic_satat_welcome"
        android:title="@string/title_about" />
    <item
        android:id="@+id/nav_events"
        android:icon="@drawable/ic_stat_event"
        android:title="@string/title_events" />
    <item
        android:id="@+id/nav_book"
        android:icon="@drawable/ic_stat_booking"
        android:title="@string/title_buchen" />
    <item
        android:id="@+id/nav_route"
        android:icon="@drawable/ic_stat_offnungszeiten"
        android:title="@string/title_open"/>
    <item
        android:id="@+id/nav_more"
        android:icon="@drawable/ic_stat_more"
        android:title="@string/title_more" />
</menu>