<?xml version="1.0" encoding="utf-8"?>
<android.support.constraint.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/background"
    tools:context=".BookFragment">

    <!-- TODO: Update blank fragment layout -->
    <TextView
        android:id="@+id/welcome_text"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginBottom="431dp"
        android:fontFamily="cursive"
        android:lineSpacingExtra="8sp"
        android:text="@string/title_book_text"
        android:textAlignment="center"
        android:textColor="@color/colorAccent"
        android:textSize="30sp"
        android:textStyle="italic"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.20" />

    <LinearLayout
        android:id="@+id/linearLayout"
        android:layout_width="match_parent"
        android:layout_height="40dp"
        android:layout_marginStart="16dp"
        android:layout_marginTop="8dp"
        android:layout_marginEnd="16dp"
        android:layout_marginBottom="32dp"
        android:orientation="horizontal"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/welcome_text"
        app:layout_constraintVertical_bias="0.03">

        <EditText
            android:id="@+id/dateTE"
            android:layout_width="wrap_content"
            android:layout_height="match_parent"
            android:layout_marginEnd="8dp"
            android:layout_weight="1"
            android:background="@color/colorAccent"
            android:ems="10"
            android:fontFamily="cursive"
            android:hint="@string/dateET"
            android:inputType="date"
            android:textAlignment="center" />

        <EditText
            android:id="@+id/timeET"
            android:layout_width="wrap_content"
            android:layout_height="match_parent"
            android:layout_marginStart="8dp"
            android:layout_weight="2"
            android:background="@color/colorAccent"
            android:ems="10"
            android:fontFamily="cursive"
            android:hint="@string/timeET"
            android:inputType="time"
            android:textAlignment="center" />
    </LinearLayout>

    <EditText
        android:id="@+id/vornameET"
        android:layout_width="0dp"
        android:layout_height="40dp"
        android:layout_marginStart="16dp"
        android:layout_marginTop="8dp"
        android:layout_marginEnd="16dp"
        android:layout_marginBottom="8dp"
        android:background="@color/colorAccent"
        android:ems="10"
        android:fontFamily="cursive"
        android:hint="@string/vornameET"
        android:inputType="textPersonName"
        android:textAlignment="textStart"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/linearLayout"
        app:layout_constraintVertical_bias="0.05"
        android:paddingStart="8dp"/>

    <EditText
        android:id="@+id/nachnameET"
        android:layout_width="0dp"
        android:layout_height="40dp"
        android:layout_marginStart="16dp"
        android:layout_marginTop="8dp"
        android:layout_marginEnd="16dp"
        android:layout_marginBottom="8dp"
        android:background="@color/colorAccent"
        android:ems="10"
        android:fontFamily="cursive"
        android:hint="@string/nachnameET"
        android:inputType="textPersonName"
        android:paddingStart="8dp"
        android:textAlignment="textStart"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/vornameET"
        app:layout_constraintVertical_bias="0.05" />

    <EditText
        android:id="@+id/personenET"
        android:layout_width="174dp"
        android:layout_height="40dp"
        android:layout_marginStart="16dp"
        android:layout_marginTop="8dp"
        android:layout_marginEnd="16dp"
        android:layout_marginBottom="8dp"
        android:background="@color/colorAccent"
        android:ems="10"
        android:fontFamily="cursive"
        android:hint="@string/anzahlET"
        android:inputType="numberSigned"
        android:paddingStart="8dp"
        android:textAlignment="textStart"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/nachnameET"
        app:layout_constraintVertical_bias="0.05" />

    <EditText
        android:id="@+id/emailET"
        android:layout_width="0dp"
        android:layout_height="40dp"
        android:layout_marginStart="16dp"
        android:layout_marginTop="8dp"
        android:layout_marginEnd="16dp"
        android:layout_marginBottom="8dp"
        android:background="@color/colorAccent"
        android:ems="10"
        android:fontFamily="cursive"
        android:hint="@string/emailET"
        android:inputType="textEmailAddress"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/personenET"
        app:layout_constraintVertical_bias="0.05"
        android:paddingStart="8dp"/>

    <EditText
        android:id="@+id/phoneET"
        android:layout_width="0dp"
        android:layout_height="40dp"
        android:layout_marginStart="16dp"
        android:layout_marginTop="8dp"
        android:layout_marginEnd="16dp"
        android:layout_marginBottom="8dp"
        android:background="@color/colorAccent"
        android:ems="10"
        android:fontFamily="cursive"
        android:hint="@string/telefonET"
        android:inputType="phone"
        android:paddingStart="8dp"
        android:textAlignment="textStart"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/emailET"
        app:layout_constraintVertical_bias="0.05" />

    <Button
        android:id="@+id/button"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="8dp"
        android:layout_marginEnd="16dp"
        android:layout_marginBottom="32dp"
        android:background="@drawable/radius_button"
        android:paddingStart="8dp"
        android:paddingEnd="8dp"
        android:text="@string/bookButton"
        android:textColor="@color/colorAccent"
        android:textStyle="italic"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/phoneET" />

</android.support.constraint.ConstraintLayout>