<?xml version="1.0" encoding="utf-8"?>
<android.support.constraint.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/background"
    tools:context=".MenuActivity">

    <ScrollView
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginStart="16dp"
        android:layout_marginEnd="16dp"
        android:layout_marginBottom="16dp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toStartOf="parent">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="32dp"
            android:orientation="vertical">

            <TextView
                android:id="@+id/breakfast"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="8dp"
                android:layout_marginBottom="16dp"
                android:background="@color/colorAccent"
                android:paddingStart="8dp"
                android:paddingEnd="8dp"
                android:text="@string/breakfast" />

            <TextView
                android:id="@+id/lunch"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="8dp"
                android:layout_marginBottom="16dp"
                android:background="@color/colorAccent"
                android:paddingStart="8dp"
                android:paddingEnd="8dp"
                android:text="@string/lunch" />

            <TextView
                android:id="@+id/dinner"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="8dp"
                android:layout_marginBottom="16dp"
                android:background="@color/colorAccent"
                android:paddingStart="8dp"
                android:paddingEnd="8dp"
                android:text="@string/dinner" />

            <TextView
                android:id="@+id/desserts"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="8dp"
                android:layout_marginBottom="16dp"
                android:background="@color/colorAccent"
                android:paddingStart="8dp"
                android:paddingEnd="8dp"
                android:text="@string/desserts" />
        </LinearLayout>
    </ScrollView>
</android.support.constraint.ConstraintLayout>