<?xml version="1.0" encoding="utf-8"?>
<android.support.constraint.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/background"
    tools:context=".OpenFragment">

    <!-- TODO: Update blank fragment layout -->
    <TextView
        android:id="@+id/welcome_text"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginBottom="431dp"
        android:fontFamily="cursive"
        android:lineSpacingExtra="8sp"
        android:text="@string/title_offnungszeiten"
        android:textAlignment="center"
        android:textColor="@color/colorAccent"
        android:textSize="30sp"
        android:textStyle="italic"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.20" />

    <LinearLayout
        android:id="@+id/linearLayout2"
        android:layout_width="304dp"
        android:layout_height="273dp"
        android:layout_marginStart="40dp"
        android:layout_marginTop="8dp"
        android:layout_marginEnd="40dp"
        android:layout_marginBottom="8dp"
        android:orientation="vertical"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/welcome_text"
        app:layout_constraintVertical_bias="0.3">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="40dp"
            android:orientation="horizontal">

            <ImageView
                android:id="@+id/imageView3"
                android:layout_width="30dip"
                android:layout_height="30dip"
                android:contentDescription="@string/timeq"
                android:src="@mipmap/ic_launcher_logo_icon"
                tools:layout_editor_absoluteX="64dp"
                tools:layout_editor_absoluteY="102dp" />

            <TextView
                android:id="@+id/montag"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:fontFamily="monospace"
                android:lineSpacingExtra="10sp"
                android:paddingStart="16dp"
                android:paddingEnd="16dp"
                android:text="@string/montag"
                android:textColor="@color/colorAccent"
                android:textSize="18sp"
                android:textStyle="bold" />
        </LinearLayout>

        <TextView
            android:id="@+id/textView3"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:fontFamily="monospace"
            android:lineSpacingExtra="10sp"
            android:paddingStart="64dp"
            android:paddingEnd="64dp"
            android:text="@string/timeq"
            android:textColor="@color/colorAccent"
            android:textSize="18sp"
            android:textStyle="bold" />

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="40dp"
            android:orientation="horizontal">

            <ImageView
                android:id="@+id/imageView4"
                android:layout_width="30dip"
                android:layout_height="30dip"
                android:contentDescription="@string/time2"
                android:src="@mipmap/ic_launcher_logo_icon"
                tools:layout_editor_absoluteX="64dp"
                tools:layout_editor_absoluteY="102dp" />

            <TextView
                android:id="@+id/freitag"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:fontFamily="monospace"
                android:lineSpacingExtra="10sp"
                android:paddingStart="16dp"
                android:paddingEnd="16dp"
                android:text="@string/freitag"
                android:textColor="@color/colorAccent"
                android:textSize="18sp"
                android:textStyle="bold" />
        </LinearLayout>

        <TextView
            android:id="@+id/textView4"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:fontFamily="monospace"
            android:lineSpacingExtra="10sp"
            android:paddingStart="64dp"
            android:paddingEnd="64dp"
            android:text="@string/time2"
            android:textColor="@color/colorAccent"
            android:textSize="18sp"
            android:textStyle="bold" />

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="40dp"
            android:orientation="horizontal">

            <ImageView
                android:id="@+id/imageView5"
                android:layout_width="30dip"
                android:layout_height="30dip"
                android:contentDescription="@string/time3"
                android:src="@mipmap/ic_launcher_logo_icon"
                tools:layout_editor_absoluteX="64dp"
                tools:layout_editor_absoluteY="102dp" />

            <TextView
                android:id="@+id/sonntag"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:fontFamily="monospace"
                android:lineSpacingExtra="10sp"
                android:paddingStart="16dp"
                android:paddingEnd="16dp"
                android:text="@string/sonntag"
                android:textColor="@color/colorAccent"
                android:textSize="18sp"
                android:textStyle="bold" />
        </LinearLayout>

        <TextView
            android:id="@+id/textView6"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:fontFamily="monospace"
            android:lineSpacingExtra="10sp"
            android:paddingStart="64dp"
            android:paddingEnd="64dp"
            android:text="@string/time3"
            android:textColor="@color/colorAccent"
            android:textSize="18sp"
            android:textStyle="bold" />

    </LinearLayout>

</android.support.constraint.ConstraintLayout>