<?xml version="1.0" encoding="utf-8"?>
<android.support.constraint.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/background"
    tools:context=".WirActivity">

    <LinearLayout
        android:id="@+id/linearLayout3"
        android:layout_width="242dp"
        android:layout_height="150dp"
        android:layout_marginStart="16dp"
        android:layout_marginTop="8dp"
        android:layout_marginEnd="16dp"
        android:layout_marginBottom="8dp"
        android:orientation="vertical"
        app:layout_constraintBottom_toTopOf="@+id/textView"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.645"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/textView2">

        <TextView
            android:id="@+id/textView7"
            android:layout_width="match_parent"
            android:layout_height="50dp"
            android:lineSpacingExtra="14sp"
            android:paddingStart="8dp"
            android:text="@string/wir_phone"
            android:textAlignment="viewStart"
            android:textColor="@color/colorAccent"
            android:textSize="16sp" />

        <TextView
            android:id="@+id/textView8"
            android:layout_width="match_parent"
            android:layout_height="50dp"
            android:paddingStart="8dp"
            android:text="@string/wir_mail"
            android:textAlignment="viewStart"
            android:textColor="@color/colorAccent"
            android:textSize="16sp" />

        <TextView
            android:id="@+id/textView9"
            android:layout_width="match_parent"
            android:layout_height="50dp"
            android:paddingStart="8dp"
            android:text="@string/wir_adresse"
            android:textAlignment="viewStart"
            android:textColor="@color/colorAccent"
            android:textSize="16sp" />

    </LinearLayout>

    <TextView
        android:id="@+id/textView"
        android:layout_width="328dp"
        android:layout_height="138dp"
        android:layout_marginStart="16dp"
        android:layout_marginTop="8dp"
        android:layout_marginEnd="16dp"
        android:layout_marginBottom="8dp"
        android:fontFamily="monospace"
        android:lineSpacingExtra="8sp"
        android:text="@string/wir_text"
        android:textAlignment="center"
        android:textColor="@color/colorAccent"
        android:textSize="14sp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/textView2"
        app:layout_constraintVertical_bias="0.677" />

    <TextView
        android:id="@+id/textView2"
        android:layout_width="196dp"
        android:layout_height="31dp"
        android:layout_marginStart="8dp"
        android:layout_marginTop="48dp"
        android:layout_marginEnd="8dp"
        android:fontFamily="monospace"
        android:text="@string/wir_name"
        android:textAlignment="center"
        android:textColor="@color/colorAccent"
        android:textSize="18sp"
        android:textStyle="bold"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <ImageView
        android:id="@+id/imageView13"
        android:layout_width="41dp"
        android:layout_height="28dp"
        android:layout_marginStart="8dp"
        android:layout_marginTop="32dp"
        android:layout_marginEnd="8dp"
        app:layout_constraintEnd_toStartOf="@+id/linearLayout3"
        app:layout_constraintHorizontal_bias="1.0"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/textView2"
        app:srcCompat="@mipmap/ic_stat_call" />

    <ImageView
        android:id="@+id/imageView14"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginEnd="8dp"
        android:layout_marginBottom="8dp"
        app:layout_constraintBottom_toTopOf="@+id/textView"
        app:layout_constraintEnd_toStartOf="@+id/linearLayout3"
        app:layout_constraintTop_toBottomOf="@+id/imageView13"
        app:layout_constraintVertical_bias="0.187"
        app:srcCompat="@android:drawable/ic_dialog_email" />

    <ImageView
        android:id="@+id/imageView15"
        android:layout_width="41dp"
        android:layout_height="39dp"
        android:layout_marginStart="47dp"
        android:layout_marginEnd="8dp"
        android:layout_marginBottom="25dp"
        app:layout_constraintBottom_toTopOf="@+id/textView"
        app:layout_constraintEnd_toStartOf="@+id/linearLayout3"
        app:layout_constraintHorizontal_bias="1.0"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/imageView14"
        app:srcCompat="@android:drawable/ic_menu_myplaces" />

</android.support.constraint.ConstraintLayout>